style: add decorational elements seo: add basic meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Weronika Dominiak | Frontend Developer</title>
 		<!-- TODO: add meta tags -->
+		<meta
+			name="description"
+			content="Weronika Domniniak - Software Engineer who specializes in building seamless digital experiences"
+		/>
 		<!-- TODO  make new favicon-->
 		<link rel="icon" href="/assets/favicon.svg" />
 
@@ -15,14 +19,17 @@
 	<body>
 		<header>
 			<nav>
-				<a href="#">Home</a>
 				<!-- TODO I don't like when email is like this on the top, I should introduce contact section -->
-				<a href="mailto:mail@weronika.dev">Contact</a>
+				<a class="btn btn--primary" href="mailto:mail@weronika.dev">Contact</a>
 			</nav>
 		</header>
 		<main>
 			<section class="intro flex center">
 				<div class="intro--inner flex column gap">
+					<div class="bg-decor--dots"></div>
+					<div class="bg-decor--sphere bg-decor--sphere-l"></div>
+					<div class="bg-decor--sphere bg-decor--sphere-m"></div>
+					<div class="bg-decor--sphere bg-decor--sphere-s"></div>
 					<p>Hi, my name is</p>
 					<h1 class="decorative--secondary">Weronika Dominiak</h1>
 					<h2>
