content: update seo and cv

--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Weronika Dominiak | Frontend Developer</title>
-		<!-- TODO: add meta tags -->
 		<meta
 			name="description"
 			content="Weronika Domniniak - Software Engineer who specializes in building seamless digital experiences"
 		/>
-		<!-- TODO  make new favicon-->
+		<!-- Open Graph meta tags (for better social media sharing) -->
+		<meta property="og:title" content="Weronika Dominiak - Web Developer" />
+		<meta
+			property="og:description"
+			content="I build things for the web. Web Developer specializing in resolving design problems, building smart user interfaces, and developing rich web applications."
+		/>
+		<!-- TODO get image -->
+		<!-- <meta property="og:image" content="" /> -->
+
+		<!-- Twitter Card meta tags (for Twitter sharing) -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Weronika Dominiak - Web Developer" />
+		<meta
+			name="twitter:description"
+			content="I build things for the web. Web Developer specializing in resolving design problems, building smart user interfaces, and developing rich web applications."
+		/>
+		<!-- <meta name="twitter:image" content="" /> -->
+
 		<link rel="icon" href="/assets/favicon.svg" />
 
 		<link rel="stylesheet" href="./style.css" />
@@ -34,7 +50,9 @@
 				</button>
 
 				<!-- TODO I don't like when email is like this on the top, I should introduce contact section -->
-				<a class="btn btn--primary" href="mailto:mail@weronika.dev">Contact</a>
+				<a class="btn btn--primary" href="mailto:contact@weronika.dev"
+					>Contact</a
+				>
 			</nav>
 		</header>
 		<main>
@@ -56,7 +74,7 @@
 					</p>
 					<p>
 						Email me at
-						<a href="mailto:mail@weronika.dev">mail@weronika.dev</a>.
+						<a href="mailto:contact@weronika.dev">contact@weronika.dev</a>.
 					</p>
 				</div>
 			</section>
