--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			property="og:description"
 			content="I build things for the web. Web Developer specializing in resolving design problems, building smart user interfaces, and developing rich web applications."
 		/>
-		<!-- TODO get image -->
+		<!-- TODO prepare image -->
 		<!-- <meta property="og:image" content="" /> -->
 
 		<!-- Twitter Card meta tags (for Twitter sharing) -->
@@ -25,10 +25,10 @@
 			name="twitter:description"
 			content="I build things for the web. Web Developer specializing in resolving design problems, building smart user interfaces, and developing rich web applications."
 		/>
-		<!-- <meta name="twitter:image" content="" /> -->
 
 		<link rel="icon" href="/assets/favicon.svg" />
-
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 
