feat: enhance theme switch button with aria-label
Add aria-label for better accessibility on theme switch button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<body>
 		<header>
 			<nav>
-				<button id="toggle-theme" class="theme-switch">
+				<button id="toggle-theme" class="theme-switch" aria-label="Switch theme">
 					<svg
 						width="40"
 						height="40"
